Fixed the social media row placement on mobile

--- a/src/styles/__components.scss
+++ b/src/styles/__components.scss
@@ -357,6 +357,9 @@ footer {
         border: $primary-text 2px solid;
       }
     }
+    &:last-of-type {
+      margin-right: 0;
+    }
   }
 }
 
